--- a/app/src/main/res/layout/crea_giorno.xml
+++ b/app/src/main/res/layout/crea_giorno.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:id="@+id/origineGiorno"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/drawable_creasgiorno"
-    android:padding="20dp">
+    android:background="@drawable/drawable_creascheda"
+    android:padding="20dp"
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginBottom="80dp"
+        >
 
     <Button
         android:onClick="ChiudTuttoNonSalva"
@@ -54,37 +60,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
-    <Button
-        android:id="@+id/CreaEsercizio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Aggiungi esercizio"
-        android:layout_gravity="center"
-        android:background="@drawable/drawable_item_esercizio"
-        android:onClick="AggiungiGiorno"
-        android:padding="10dp"
-        >
-    </Button>
+    </LinearLayout>
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
         >
+
+        <Button
+            android:id="@+id/CreaEsercizio"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Aggiungi esercizio"
+            android:background="@drawable/drawable_item_esercizio"
+            android:onClick="AggiungiGiorno"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            >
+        </Button>
         <Button
             android:id="@+id/backGiorno"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:text="Back"
             android:layout_gravity="center"
             android:background="@drawable/drawable_botton_grey"
 
             >
         </Button>
+
     </LinearLayout>
-
-
-
-</LinearLayout>
+</RelativeLayout>
